*******************************************************************************
2.0.19 public release
*******************************************************************************

*******************************************************************************
4.3.devel.18 (aka 4.3.final)

Tue Mar 26 19:00:37 1996  George Jacob  <georgej@lava.franz.com (George Jacob)>

	* Makefile: Switch to using emacs, to build, rather than xemacs-19.13.

*******************************************************************************
Mon Mar 25 18:14:51 1996  Steve Haflich  <smh@vapor>

	* Change /usr/ucb/rdist to /usr/local/rdist, which sa maintains.

Mon Mar 25 15:36:35 1996  Steve Haflich  <smh@vapor>

	* Makefile: Updated the rdist list.
	* fi-indent.el:  Added property for def-tr.

*******************************************************************************
4.3.devel.15

Thu Mar  7 02:56:29 1996  George Jacob  <georgej@lava>

	* eli/Makefile: Compile using xemacs-19.13 (available on all
	platforms)
*******************************************************************************

Fri Jan  5 11:03:17 1996  Steve Haflich  <smh@vapor>

	* eli/Makefile:	Removed ore hosts from rdist rule.

	* eli/fi-emacs19.el:
	* eli/fi-xemacs.el:
	  Removed connected-to-epoch-p conditionalizations.  The menu item availability
	  code is still flawed and needs rewriting.

	* eli/fi-lep.el:
	  ensure-translated-pathname renamed fi::ensure-translated-pathname

	* eli/fi-site-init.el: Bump version number to 2.0.19.


Wed Nov 15 13:47:00 1995  Steve Haflich  <smh@vapor>

	* Makefile:
	Compile local-fi-developer-hooks.el if it exists.
	Add local-fi-developer-hooks.el to rdist.
	Remove host hyper from the rdist.

	* fi-site-init.el:
	Load local-fi-developer-hooks.elc if it exists.

	* local-fi-developer-hooks.el:
	New file.  Contains only local-write-file-hooks for common-lisp and c
	mode buffers to do some automatic source-file id tagging.